RESOLVED FIXED 245199
[JSC] Microtask should not care about exceptions
https://bugs.webkit.org/show_bug.cgi?id=245199
Summary [JSC] Microtask should not care about exceptions
Yusuke Suzuki
Reported 2022-09-14 15:43:08 PDT
...
Attachments
Yusuke Suzuki
Comment 1 2022-09-14 15:46:17 PDT
Radar WebKit Bug Importer
Comment 2 2022-09-14 15:46:34 PDT
EWS
Comment 3 2022-09-16 01:16:20 PDT
Committed 254546@main (634d22fbdc85): <https://commits.webkit.org/254546@main> Reviewed commits have been landed. Closing PR #4363 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.