Cherry-pick 634d22fbdc85. rdar://problem/99237677

[JSC] Microtask should not care about exceptions
    https://bugs.webkit.org/show_bug.cgi?id=245199
    rdar://99237677

    Reviewed by Mark Lam.

    Microtask execution should be done without exception, and any exceptions thrown can be cleared when running microtasks.
    We clear exceptions extensively for all cases, plus, we early return if termination exception is already thrown.

    * Source/JavaScriptCore/runtime/JSMicrotask.cpp:
    (JSC::runJSMicrotask):

    Canonical link: https://commits.webkit.org/254546@main

Canonical link: https://commits.webkit.org/252432.420@safari-7614-branch